1. Added changes to php and javascript web-app 2. Added extra phone features to store in the database (phone number) 3. Added batteryLevel and signalStrength to message 0 response 4. Added gradle flavors for prod and dev 5. Created new android project with updated dependencies

--- a/web_app/index.html
+++ b/web_app/index.html
@@ -60,6 +60,15 @@
                         <tr>
                             <td>Ping</td>
                             <td data-label="ping"></td>
+                        </tr>
+                        <tr>
+                            <td>Signal strength:</td>
+                            <td data-label="signal-strength"></td>
+                        </tr>
+                        <tr>
+                            <td>Battery level:</td>
+                            <td data-label="battery-level"></td>
+                        </tr>
                         </tbody>
                     </table>
                 </div>
